--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Understanding TypeScript</title>
-  <script src="app.js" defer></script>
+  <script src="dist/app.js" defer></script>
+  <script src='dist/sending.js' defer></script>
 </head>
 
-<body></body>
+<body>
+  <button>Click Me</button>
+</body>
 
 </html>
